--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+* {
+  flex: auto;
+}
+
+
 .App {
   text-align: center;
 }
@@ -36,3 +41,31 @@
     transform: rotate(360deg);
   }
 }
+
+/* body {
+ 
+  background: #6a11cb;
+
+
+  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+ 
+  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+} */
+
+
+.loginform {
+  width: 50%;
+}
+
+.carousel {
+  
+  /* padding-top: 2%; */
+  width:fit-content;
+  margin: auto;
+  padding: 2%;
+  
+  
+}
+
+
